Changelog
=========

Changes from cgkit-2.0.0alpha8 to cgkit-2.0.0alpha9:

New features:

- New module sloargs to parse compiled RenderMan shaders.
- New module pointcloud to read/write RenderMan point cloud files.

Bug fixes/enhancements:

- ri/cri: Added the following calls:
      RiArchiveBegin(), RiArchiveEnd(), RiCamera(), RiDisplayChannel(),
      RiIfBegin(), RiElseIf(), RiElse(), RiIfEnd(),
      RiMakeBrickMap(), RiResource(), RiResourceBegin(), RiResourceEnd(),
      RiScopedCoordinateSystem(), RiShader(), RiSystem().
- cri: numpy integer arrays were not properly supported on 64-bit systems
- mayaascii: Bugfix #2119263: The setAttr command wasn't recognizing the 
  channelBox option (+ some other bugfixes). 
- slparams: The module can now also retrieve information from compiled shaders
  (from various renderers).
- slparams: The returned shader info/shader parameters are no tuples anymore
  but special objects whose attributes hold the return values. For backwards,
  compatibility, those objects can still be used like tuples.
- ObjMaterial: Texture maps were rendered with a filter width of 0.01 which
  doesn't make much sense. For now, I set it to 1.0, but this should probably
  be customizable.
- mat3: The toEuler*() methods were broken. Depending on the angles, they
  could return invalid values.
- sl/noise: When only cgkit light was installed, the sl module couldn't be
  imported because it imports noise which has no pure Python equivalent yet.
  There is a dummy noise module now in the light version which allows importing
  the module. An error is only triggered when one of the functions gets called.
- rply: The sources can now also be compiled using a C++ compiler. Thanks
  to Chris Foster for the patch!
- ribexport: The Frame block now uses the frame number from the timer object
  (instead of always using 0).
- ribexport: Added RenderMan support for the torus geometry.
- cri: Improved library detection (uses renderer-specific environment variables